Add CSV support and scoring system for batch testing
Enhanced batch_test_queries.py to support both CSV and Excel input/output, including headerless CSV detection and flexible column mapping. Added SCORING_SYSTEM.md to document the new query scoring mechanism. Introduced new scripts for CSV template creation and CSV checking. Updated logs_agent.py for improved error extraction, and nl_to_kql.py/prompt_builder.py to use a minimal, static system prompt for translation. Added query evaluation modules for canonicalization and comparison. Updated documentation and .gitignore accordingly.

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,5 @@ embedding_index/domain_appinsights_embedding_index.json
 embedding_index/domain_containers_embedding_index.json
 manifest_cache.json.backup
 manifest_cache.json
+/reports
+app_insights_capsule/benchmark_queries.csv
