Update package preparation step to use tar
Replaced copy command with tar for packaging.

--- a/.github/workflows/main_azmon-logs-agent-oren.yml
+++ b/.github/workflows/main_azmon-logs-agent-oren.yml
@@ -28,9 +28,7 @@ jobs:
     - name: Prepare package (zip)
       run: |
         mkdir -p deploy_package
-        cp -r . deploy_package/app
-        # Optionally install to a local target if needed
-        # pip install -r requirements.txt -t deploy_package/app
+        tar --exclude='./deploy_package' -C . -cf - . | (cd deploy_package && tar -xf -)
         cd deploy_package
         zip -r ../package.zip .
           
