--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Disable server build on App Service (disable Oryx)
       run: |
         az webapp config appsettings set \
+          --resource-group "azmon-logs-agent-rg" \
           --name "azmon-logs-agent-oren" \
           --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false
             
