--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,14 @@ manifest_cache.json.backup
 manifest_cache.json
 /reports
 app_insights_capsule/benchmark_queries.csv
+scripts/txt_to_csv_final.py
+scripts/txt_to_csv_benchmark3.py
+scripts/txt_to_csv_benchmark.py
+scripts/test_output.xlsx
+scripts/test_output.json
+scripts/simulate_api_mapping.py
+scripts/show_tab_lines.py
+scripts/inspect_lines.py
+scripts/_diff_templates.py
+query_evaluations/benchmark_queries/AppInsightsQueries_from_excel.csv
+query_evaluations/benchmark_queries/AppInsightsQueries_from_excel.txt
