Strip full row data from API responses in batch_runner
Updated generate_and_evaluate_query to remove full 'returned_rows' and 'expected_rows' from the outward-facing response, preserving only counts and execution stats. This prevents large data payloads from being sent to API consumers while retaining necessary metadata for scoring and diagnostics.

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@ query_evaluations/benchmark_queries/AppInsightsQueries_from_excel.csv
 query_evaluations/benchmark_queries/AppInsightsQueries_from_excel.txt
 query_evaluations/benchmark_queries/AppInsightsQueries_short.csv
 scripts/simulate_api_mapping.py
+query_evaluations/benchmark_queries/AppInsightsQueries_short.csv
